--- a/fashion-client/Dockerfile
+++ b/fashion-client/Dockerfile
@@ -165,12 +165,19 @@ FROM ubuntu:bionic
 RUN apt-get update \
  && apt-get install -y \
  gnupg \
- systemd
+ systemd \
+ python3-pip
 
 COPY --from=sawtooth-signing-builder /sawtooth-core/python3-sawtooth-signing*.deb /tmp
 COPY --from=sawtooth-sdk-python-builder /sawtooth-core/sdk/python3-sawtooth-sdk*.deb /tmp
 COPY --from=cli-builder /sawtooth-core/python3-sawtooth-cli* /tmp
 COPY --from=python-fashion-client-builder /fashion_dlt/python3-fashion-client*.deb /tmp
+
+RUN cd /root \
+ && git clone https://github.com/scresh/fashion_dlt.git \
+ && cp -r fashion_dlt/fashion_client/web_backend/ . \
+ && rm -rf fashion_dlt \
+ && pip3 install web_backend/requirements.txt
 
 RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sources.list \
  && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
