--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,10 @@ services:
     - "3000:3000"
     entrypoint: "bash -c \"\
         sawtooth keygen && \
+        cd /root/web_backend/ && \
+        nohup python3 manage.py runserver 127.0.0.1:8888 && \
+        cd /root/web_frontend/ && \
+        npm run start && \
         tail -f /dev/null \
         \""
 
